<resources>
    <string name="app_name">Loppy Driver</string>


    <string name="register_now">Register Now</string>
    <string name="login_now">Login Now</string>
    <string name="welcome_to_loppy">Welcome To Loppy</string>
    <string name="enjoy_the_wonderful_world">Enjoy the wonderful world</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in"><font color="#cccccc">Already have an Account? /</font><font color="#000000"> Sign In</font></string>
    <string name="successfully">Successfully</string>
    <string name="registered_n_successfully">Registered\nSuccessfully</string>
    <string name="okay">Okay</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_a_new_account">Create a new account?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_job">Job</string>
    <string name="title_profile">Profile</string>
    <string name="pick_up_location">Pick Up Location</string>
    <string name="destination_location">Destination Location</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="retrieve_your_password">Retrieve Your Password</string>
    <string name="submit">Submit</string>
    <string name="verify_otp_code">Verify OTP Code</string>
    <string name="enter_4_digit_otp_code_below">Enter 4 digit OTP code below</string>
    <string name="reset_your_password">Reset Your Password?</string>
    <string name="please_reset_your_new_password">Please Reset Your New Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="add_licence_image">+ Add licence image</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="no_record_found">No Record Found.</string>
    <string name="title_activity_maps">Map</string>
</resources>
